samples/_failures_safe/1761157513_4c7307_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd354c2e.c: In function ‘multiply_matrices’:
./samples/SAFE/__tmp_cd354c2e.c:112:17: error: expected ‘,’ or ‘;’ at end of input
  112 |                 long long product = (long long)a->data
      |                 ^~~~
./samples/SAFE/__tmp_cd354c2e.c:112:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd354c2e.c:112:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd354c2e.c:112:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd354c2e.c:112:17: error: expected declaration or statement at end of input
